[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keccak256"
path = "src/bin/keccak256.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.1", default-features = false, features = ['std'] }
sha3 = "0.10.8"

[profile.release]
lto = "thin"
