[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ecdsa_verify"
path = "src/bin/ecdsa_verify.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.1", default-features = false, features = ['std'] }
hex-literal = "0.4"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }


[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }

[profile.release]
lto = "thin"
